--- a/220705_IntroductiontoPython_ITseminar.ipynb
+++ b/220705_IntroductiontoPython_ITseminar.ipynb
@@ -14,7 +14,7 @@
         "_WKVFcBpzj_i",
         "XhvfBcbqyHfD"
       ],
-      "authorship_tag": "ABX9TyOccywb6lmCNoyQWCKSK/Jz",
+      "authorship_tag": "ABX9TyMuGUYvN98ERXsvyA6eoXyA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,11 +274,14 @@
         "\n",
         "### 組込み関数の利用例\n",
         "- デフォルト関数: インポートの必要がないもの(abs 等)\n",
-        "- モジュール関数: インポートの必要があるもの(math モジュールなど)\n",
+        "- ライブラリ関数: インポートの必要があるもの(math ライブラリなど)\n",
         "\n",
         "#### デフォルト関数の例\n",
         "##### 使用例1 abs\n",
-        "絶対値を求める関数"
+        "絶対値を求める関数\n",
+        "```\n",
+        "abs (絶対値を求めたい値)\n",
+        "```"
       ],
       "metadata": {
         "id": "QkDhXQKpzIkr"
@@ -311,7 +314,7 @@
       "source": [
         "##### 使用例2 input\n",
         "```\n",
-        "代入される変数 = *input*(入力フォームに表示したい文字列)\n",
+        "代入される変数 = input(入力フォームに表示したい文字列)\n",
         "```"
       ],
       "metadata": {
@@ -333,10 +336,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### モジュール関数の例\n",
-        "- math モジュールをimport する必要があります\n",
+        "#### ライブラリ関数\n",
+        "```\n",
+        "import [ライブラリ名]\n",
+        "[ライブラリ名].[関数名](関数を適用する値)\n",
+        "のように利用する\n",
+        "```\n",
+        "#### ライブラリ関数の例\n",
+        "- math ライブラリをimport する必要があります\n",
         "\n",
-        "$sin(\\frac{\\pi}{2}) = 1$ の確認"
+        "$\\sin(\\frac{\\pi}{2}) = 1$ の確認"
       ],
       "metadata": {
         "id": "8MN4skswADWV"
@@ -345,7 +354,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import math\n",
+        "import math # インポート文\n",
         "\n",
         "x = math.pi/2 \n",
         "\n",
@@ -353,6 +362,27 @@
       ],
       "metadata": {
         "id": "zVuQdXAOACq2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\sqrt(4) = 2 $ の確認"
+      ],
+      "metadata": {
+        "id": "AEOAkmqwab8U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = math.sqrt(4)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "id": "AH1u5FcnacFz"
       },
       "execution_count": null,
       "outputs": []
@@ -376,8 +406,10 @@
       "source": [
         "# quotient 商\n",
         "# quotient = 57 ? 4\n",
+        "\n",
         "# reminder あまり\n",
-        "# quotient = 57 ? 4\n",
+        "# reminder = 57 ? 4\n",
+        "\n",
         "# result = ???\n"
       ],
       "metadata": {
@@ -502,8 +534,9 @@
         "### データ構造の種類\n",
         "- イテラブル iterable: 順にたどることが可能なデータ構造\n",
         "  - リスト\n",
-        "  - 辞書\n",
         "  - 文字列\n",
+        "  - 辞書\n",
+        "    - ※辞書は，順にたどることができるが，書いたとおりの順序で保存されるとは限らない点に注意\n",
         "\n",
         "- ミュータブル mutable: 値の変更，追加，削除ができるデータ構造"
       ],
@@ -1178,6 +1211,73 @@
       ],
       "metadata": {
         "id": "cUamIZKIMP8a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## グラフ描画\n",
+        "- import matplotlib.pyplot as plt で読み込み\n",
+        "- plt.関数名()で描画や設定を行う"
+      ],
+      "metadata": {
+        "id": "d9crv9IXlXXO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sin関数の描画\n",
+        "\n",
+        "import math\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "x = np.linspace(-np.pi, np.pi, 200)\n",
+        "print(x)\n",
+        "y = np.sin(x)\n",
+        "\n",
+        "plt.plot(x, y)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "DFOpvqRAlWvE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 演習 うなりの可視化\n",
+        "- 周波数の近い2つのsin波を同時に鳴らすと，「[うなり](https://www.youtube.com/watch?v=F9CUqFdX7Rs)」という現象が現れる．\n",
+        "- f1 = 40 Hz, f2 = 42 Hzの周波数をもつ2つのsin波を鳴らしたときに現れるうなりを，グラフによって可視化してください．"
+      ],
+      "metadata": {
+        "id": "4tA2qX50l6HN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sin関数の描画\n",
+        "\n",
+        "import math\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "f1 = 40\n",
+        "\n",
+        "t = np.linspace(0, 1, 400)\n",
+        "y = np.sin(2 * np.pi * f1 * t) \n",
+        "\n",
+        "plt.plot(t, y)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "t4RexMmKl5YO"
       },
       "execution_count": null,
       "outputs": []
