Colaboratory を使用して作成しました

--- a/220705_IntroductiontoPython_ITseminar.ipynb
+++ b/220705_IntroductiontoPython_ITseminar.ipynb
@@ -14,7 +14,7 @@
         "_WKVFcBpzj_i",
         "XhvfBcbqyHfD"
       ],
-      "authorship_tag": "ABX9TyMuGUYvN98ERXsvyA6eoXyA",
+      "authorship_tag": "ABX9TyOdB3c3Ugi/pJxG0noDPglC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1206,7 +1206,7 @@
       "cell_type": "code",
       "source": [
         "dicesetting =  input(\"please enter the dice setting (MdN), M means times, and N means max number of dice number: \")\n",
-        "M, N = (i for i in dicesetting.split(\"d\"))\n",
+        "M, N = (int(i) for i in dicesetting.split(\"d\"))\n",
         "print(M, N)"
       ],
       "metadata": {
